# ollamazip

./: .gitignore  README.md  pyproject.toml
docs/: essay.md
src/ollamazip/: __init__.py  __main__.py  cli.py  core.py  gui.py
tests/: test_core.py
