[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollamazip"
version = "0.1.0"
description = "Bundle Ollama models into single portable archives for transfer between machines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "BiasBuster Team" },
]
keywords = ["ollama", "llm", "model", "bundle", "archive", "transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving :: Packaging",
]

[project.optional-dependencies]
zstd = ["zstandard>=0.19"]

[project.scripts]
ollamazip = "ollamazip.cli:main"

[project.urls]
Repository = "https://github.com/hherb/biasbuster"

[tool.hatch.build.targets.wheel]
packages = ["src/ollamazip"]
